# flint2

./: Makefile.am  autostructure.sh  autotools.mk  build-setup.sh  clean-setup.sh  configure.ac  generate-rules.sh
include/: Rules.am
src/: Rules.am
src/arith/: Rules.am
src/arith/test/: Rules.am
src/aux/: Rules.am
src/aux/test/: Rules.am
src/fmpq_poly/: Rules.am
src/fmpq_poly/test/: Rules.am
src/fmpz/: Rules.am
src/fmpz/test/: Rules.am
src/fmpz_mat/: Rules.am  zero.c
src/fmpz_mat/test/: Rules.am
src/fmpz_poly/: Rules.am
src/fmpz_poly/test/: Rules.am
src/fmpz_vec/: Rules.am
src/fmpz_vec/test/: Rules.am
src/long_extras/: Rules.am
src/mpfr_mat/: Rules.am
src/mpfr_mat/test/: Rules.am
src/mpfr_vec/: Rules.am
src/mpfr_vec/test/: Rules.am
src/mpn_extras/: Rules.am
src/mpn_extras/test/: Rules.am
src/nmod_mat/: Rules.am  equal.c  mul.c
src/nmod_mat/test/: Rules.am
src/nmod_poly/: Rules.am
src/nmod_poly/test/: Rules.am
src/nmod_vec/: Rules.am
src/nmod_vec/test/: Rules.am
src/ulong_extras/: Rules.am
src/ulong_extras/test/: Rules.am  t-prime_pi.c
test/: Rules.am
